--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ language: python
 python:
   - 2.7
   - 3.3
-install: pip install -e .
+install:
+  - "[[ $TRAVIS_PYTHON_VERSION == '3.3' ]] && 2to3 -wn ."
+  - pip install -e .
 script: nosetests
