--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ script: nosetests
 notifications:
   slack:
     secure: usFefef17MivrLCBcaMCP4r8FPHDS65Lk6I+gbcSePVtxohLvqhqBUjGhAyAEKU2Feyajz+qNdSEIonSl5W41zXJUIDj58ag+VvHP4Az1fu9vrRY3Pq0u1tkMZIaICshdB2nPgXK96uWXhx8MfD8WbQGEnvVdkbYomwb1/kaLdA=
+    on_success: change
+    on_failure: always
+
